fix mobil spacing

--- a/src/components/landing/tokenomics.css
+++ b/src/components/landing/tokenomics.css
@@ -102,5 +102,6 @@
   }
   .details {
     height: auto;
+    margin-top: 30px;
   }
 }
